Update sửa thông tin tuyển dụng
sửa tuyern dụng

--- a/public/site/css/style.css
+++ b/public/site/css/style.css
@@ -5063,6 +5063,7 @@ label>sup, .label>sup {
     font-size: 12px;
     line-height: 13px;
     -webkit-appearance: none;
+    color: #999;
 }
 .comment-form textarea.form-control {
 	font-size: 12px;
