Chức năng nộp hồ sơ

--- a/public/site/css/style.css
+++ b/public/site/css/style.css
@@ -3992,7 +3992,7 @@ label>sup, .label>sup {
 
 .notifications-list-wrapper .notification {
 	margin: 2px;
-	padding: 30px;
+	padding: 15px 30px;
 	background: #fff;	
 	cursor: pointer;
 	-webkit-transition: .3s;
