--- a/public/site/css/style.css
+++ b/public/site/css/style.css
@@ -345,12 +345,18 @@ ul {
    ========================================================================== */
 
 .alert {
-	font-size: 11px;
+	/* font-size: 11px;
 	line-height: 24px;
 	padding: 7px 18px;
 	border-radius: 3;
 	margin-bottom: 32px;
-	font-weight: 700;
+	font-weight: 700; */
+
+	position: fixed;
+    z-index: 9999;
+    top: 25.5%;
+	left: 10px;
+	
 	letter-spacing: .6px;
 	text-transform: none;
 	text-align: left;
@@ -380,6 +386,9 @@ ul {
 	display: none;
 	margin-top: 32px;
 	margin-bottom: 0;
+}
+.alert-hide{
+	display: none;
 }
 
 /* ==========================================================================
